# logistic-engineer

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/calculate/: calculator.py  save_metrics.py
src/calculate/metrics/: metrics_carriers.py  metrics_deliveries.py  metrics_vehicles.py  metrics_warehouses.py
src/extract/: api_client.py  extractor.py
src/transform/: transformer.py
src/transform/cleaner/: carriers_cleaner.py  deliveries_cleaner.py  vehicles_cleaner.py  warehouses_cleaner.py
tests/: conftest.py  test_api_client.py  test_extractor.py
