[project]
name = "logistic-engineering"
version = "0.1.0"
description = ""
authors = [
    {name = "FlavRei"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src" }]